--- a/tisk.html
+++ b/tisk.html
@@ -2,11 +2,16 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Štítky - generátor (řada od–do, sudé/liché, patro, pozice X/L/A/B)</title>
+  <title>Štítky – generátor (3 EANy pod sebou)</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <style>
-    body { background: #0066b3; font-family: 'Open Sans',sans-serif; color: white; text-align: center; }
+    body {
+      background: #0066b3;
+      font-family: 'Open Sans', sans-serif;
+      color: white;
+      text-align: center;
+    }
     .main-content {
       margin: 60px auto 0;
       width: 97vw;
@@ -14,13 +19,6 @@
       background: rgba(255,255,255,0.09);
       border-radius: 18px;
       padding: 26px 18px 36px 18px;
-    }
-    .form-flex {
-      display: flex;
-      flex-direction: column;
-      gap: 13px;
-      align-items: center;
-      margin-bottom: 20px;
     }
     .row {
       display: flex;
@@ -30,50 +28,18 @@
       justify-content: center;
       width: 100%;
     }
-    .row label {
+    label {
       font-size: 1.08rem;
       font-weight: 600;
-      margin-right: 6px;
-      min-width: 56px;
-      text-align: right;
+      min-width: 60px;
     }
-    .row input[type="text"], .row input[type="number"] {
+    input, select {
       padding: 7px 12px;
       font-size: 1.03rem;
       border-radius: 6px;
-      border: 1.1px solid #bbb;
-      font-family: 'Open Sans', sans-serif;
+      border: 1px solid #bbb;
       background: #fff;
       color: #222;
-      font-weight: 400;
-      width: 65px;
-      margin-right: 4px;
-    }
-    .rada-box {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-    }
-    .rada-radio {
-      display: flex;
-      align-items: center;
-      gap: 7px;
-      margin-left: 5px;
-    }
-    .pozice-box {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      margin-left: 10px;
-    }
-    .pozice-box label {
-      font-weight: 400;
-      margin: 0;
-      min-width: 19px;
-    }
-    .checkbox {
-      transform: scale(1.18);
-      margin-right: 2px;
     }
     .added-codes {
       background: #fff;
@@ -95,30 +61,29 @@
       border-radius: 10px;
       color: #222;
     }
-    .print-labels-grid {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: flex-start;
-    }
     .print-label {
       background: #fff;
       border-radius: 7px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.09);
-      padding: 10px 16px 10px 16px;
-      margin: 2px 0;
+      padding: 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      gap: 0px;
     }
-    .ean-segment { display: flex; flex-direction: column; align-items: center; width: 100%; }
-    .bar-text { margin-top: 2px; font-size: 1.12rem; letter-spacing: 2px; font-family: 'Open Sans', monospace, monospace; }
-    .divider { border-bottom: 1px dashed #bbb; width: 98%; margin: 7px 0 7px 0; }
-    .btn-row { margin-top: 18px; }
+    .ean-segment {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+    .bar-text {
+      font-size: 1.1rem;
+      font-family: 'Open Sans', monospace;
+      margin-top: 4px;
+    }
     button {
-      margin: 6px 7px 0 0;
+      margin: 12px 7px 0 0;
       padding: 9px 24px;
       font-size: 1.07rem;
       border-radius: 7px;
@@ -127,17 +92,18 @@
       color: #fff;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.17s, transform 0.18s;
     }
-    button:hover { background: #b43a2e; transform: scale(1.03);}
-    .del-btn { background: #c2c2c2; color: #444; font-size: .93rem; padding: 3px 10px; margin-left: 8px;}
-    .del-btn:hover { background: #B84B3E; color: #fff;}
     @media print {
       body * { visibility: hidden !important; }
-      .print-labels-grid, .print-labels-grid * { visibility: visible !important;}
+      .print-area-wrap, .print-area-wrap * { visibility: visible !important; }
       .print-area-wrap {
-        position: absolute !important; left: 0; top: 0; width: 100vw !important; height: 100vh !important;
-        background: #fff !important; margin: 0 !important; padding: 0 !important; box-shadow: none !important; border-radius: 0 !important;
+        position: absolute !important;
+        left: 0; top: 0;
+        width: 100vw !important;
+        height: 100vh !important;
+        background: #fff !important;
+        margin: 0 !important; padding: 0 !important;
+        box-shadow: none !important; border-radius: 0 !important;
       }
       .main-content, .btn-row { display: none !important; }
     }
@@ -145,68 +111,55 @@
 </head>
 <body>
   <div class="main-content">
-    <label style="font-size:1.13em; margin-bottom:9px; display:inline-block;">Ruční generování štítků – rozsahy a pozice:</label>
-    <form class="form-flex" onsubmit="event.preventDefault(); addCodes();">
+    <label style="font-size:1.13em; margin-bottom:9px; display:inline-block;">Ruční generování štítků</label>
+    <form onsubmit="event.preventDefault(); addCodes();">
       <div class="row">
         <label for="zona">Zóna</label>
         <input id="zona" type="text" value="PTA" style="width:54px;">
         <label for="ulicka">Ulička</label>
-        <input id="ulicka" type="text" value="001" style="width:54px;">
+        <input id="ulicka" type="text" value="003" style="width:54px;">
+      </div>
+      <div class="row">
         <label for="radaOd">Řada</label>
-        <div class="rada-box">
-          <input id="radaOd" type="text" value="00" style="width:44px;" title="Řada od">
-          <span style="margin: 0 3px;">až</span>
-          <input id="radaDo" type="text" value="20" style="width:44px;" title="Řada do">
-          <div class="rada-radio">
-            <label style="font-size: 1em; font-weight:400;">
-              <input type="radio" name="typRady" value="all" checked>vše
-            </label>
-            <label style="font-size: 1em; font-weight:400;">
-              <input type="radio" name="typRady" value="even">sudé
-            </label>
-            <label style="font-size: 1em; font-weight:400;">
-              <input type="radio" name="typRady" value="odd">liché
-            </label>
-          </div>
-        </div>
+      </div>
+      <div class="row">
+        <input id="radaOd" type="text" value="01" style="width:44px;" title="Řada od">
+        <span style="margin: 0 3px;">až</span>
+        <input id="radaDo" type="text" value="20" style="width:44px;" title="Řada do">
+        <label><input type="radio" name="typRady" value="all" checked> vše</label>
+        <label><input type="radio" name="typRady" value="even"> sudé</label>
+        <label><input type="radio" name="typRady" value="odd"> liché</label>
       </div>
       <div class="row">
         <label for="patro">Pozice</label>
-        <input id="patro" type="text" value="01" style="width:42px;">
-        <div class="pozice-box">
-          <label><input type="checkbox" class="checkbox pozice" value="X" checked>X</label>
-          <label><input type="checkbox" class="checkbox pozice" value="L">L</label>
-          <label><input type="checkbox" class="checkbox pozice" value="A">A</label>
-          <label><input type="checkbox" class="checkbox pozice" value="B">B</label>
-        </div>
-        <button type="submit" style="margin-left: 15px; margin-top: 0;">Přidat kombinace</button>
+        <select id="patro">
+          <option value="11">11</option>
+          <option value="21">21</option>
+          <option value="31">31</option>
+          <option value="32">32</option>
+          <option value="41">41</option>
+        </select>
+        <button type="submit">Přidat kombinace</button>
       </div>
     </form>
 
     <div class="added-codes" id="added-codes"></div>
-
-    <div style="margin-top:12px;">
-      <label for="per-label">Kódů na štítek:</label>
-      <input type="number" id="per-label" value="3" min="1" max="10" style="width:44px;">
-      <label for="label-size">Velikost štítku (mm):</label>
-      <input type="text" id="label-size" value="100x60" style="width:88px;">
-      <label for="barcode-size">Velikost kódu (mm):</label>
-      <input type="text" id="barcode-size" value="90x14" style="width:88px;">
-    </div>
 
     <div class="btn-row">
       <button onclick="generateLabels()">Generovat štítky</button>
       <button style="background:#333;" onclick="printLabels()">Tisknout</button>
     </div>
   </div>
+
   <div id="print-area" class="print-area-wrap" style="display:none"></div>
+
   <script>
     let allCodes = [];
 
     function refreshCodes() {
       let html = '';
       allCodes.forEach((c, i) => {
-        html += c + '<button class="del-btn" onclick="deleteCode(' + i + ')">✕</button><br>';
+        html += c + ' <button onclick="deleteCode(' + i + ')">✕</button><br>';
       });
       document.getElementById('added-codes').innerHTML = html || '<i>Nejsou přidané žádné kódy.</i>';
     }
@@ -218,20 +171,18 @@
       const radaOd = parseInt(document.getElementById('radaOd').value,10);
       const radaDo = parseInt(document.getElementById('radaDo').value,10);
       const typRady = document.querySelector('input[name="typRady"]:checked').value;
-      const pozice = Array.from(document.querySelectorAll('.pozice:checked')).map(x => x.value);
 
-      if (!zona || !ulicka || isNaN(radaOd) || isNaN(radaDo) || !patro || pozice.length === 0) {
-        alert("Vyplň všechny části a vyber aspoň jednu pozici!");
+      if (!zona || !ulicka || isNaN(radaOd) || isNaN(radaDo) || !patro) {
+        alert("Vyplň všechna pole.");
         return;
       }
+
       for (let r = radaOd; r <= radaDo; r++) {
         if (typRady === "even" && r % 2 !== 0) continue;
         if (typRady === "odd" && r % 2 === 0) continue;
-        let rStr = r.toString().padStart(2,"0");
-        pozice.forEach(p => {
-          let kod = `${zona}-${ulicka}-${rStr}-${patro}-${p}`;
-          allCodes.push(kod);
-        });
+        let rStr = r.toString().padStart(2, "0");
+        let kod = `${zona}-${ulicka}-${rStr}-${patro}`;
+        allCodes.push(kod);
       }
       refreshCodes();
     }
@@ -241,12 +192,16 @@
       refreshCodes();
     }
 
-    function mmToPx(mm) { return Math.round(mm * (96 / 25.4)); }
+    function mmToPx(mm) {
+      return Math.round(mm * (96 / 25.4));
+    }
 
     function generateLabels() {
-      const perLabel = Math.max(1, parseInt(document.getElementById('per-label').value,10));
-      const [labelW, labelH] = document.getElementById('label-size').value.split('x').map(Number);
-      const [bcW, bcH] = document.getElementById('barcode-size').value.split('x').map(Number);
+      const perLabel = 3;
+      const labelW = 104;
+      const labelH = 76;
+      const bcW = 90;
+      const bcH = 18;
 
       let codes = [...allCodes];
       let labels = [];
@@ -256,8 +211,6 @@
       const printArea = document.getElementById('print-area');
       printArea.innerHTML = '';
       printArea.style.display = 'block';
-      const grid = document.createElement('div');
-      grid.className = 'print-labels-grid';
 
       labels.forEach(group => {
         const labelDiv = document.createElement('div');
@@ -265,40 +218,35 @@
         labelDiv.style.width = mmToPx(labelW) + 'px';
         labelDiv.style.height = mmToPx(labelH) + 'px';
 
-        group.forEach((code, idx) => {
+        group.forEach(code => {
           const ean = code.replace(/-/g, '');
           const segment = document.createElement('div');
           segment.className = 'ean-segment';
-          // Čárový kód
+
           const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
           svg.setAttribute('width', mmToPx(bcW));
           svg.setAttribute('height', mmToPx(bcH));
           JsBarcode(svg, ean, {
             format: "CODE128",
             width: Math.max(2, mmToPx(bcW)/60),
-            height: mmToPx(bcH)-8,
+            height: mmToPx(bcH)-6,
             margin: 0,
             displayValue: false
           });
           segment.appendChild(svg);
-          // Text pod kódem
+
           const textDiv = document.createElement('div');
           textDiv.className = 'bar-text';
           textDiv.textContent = code;
           segment.appendChild(textDiv);
-          labelDiv.appendChild(segment);
 
-          // Mezičára (kromě posledního kódu)
-          if (idx !== group.length-1) {
-            const divider = document.createElement('div');
-            divider.className = 'divider';
-            labelDiv.appendChild(divider);
-          }
+          labelDiv.appendChild(segment);
         });
-        grid.appendChild(labelDiv);
+
+        printArea.appendChild(labelDiv);
       });
-      printArea.appendChild(grid);
-      window.scrollTo(0,document.body.scrollHeight);
+
+      window.scrollTo(0, document.body.scrollHeight);
     }
 
     function printLabels() {
