--- a/tisk.html
+++ b/tisk.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Generátor štítků – otočený tisk</title>
+  <title>Test JsBarcode</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
     body {
@@ -10,279 +10,56 @@
       font-family: 'Open Sans', sans-serif;
       color: white;
       text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-
-    .main-content {
-      margin: 30px auto;
-      background: rgba(255,255,255,0.1);
       padding: 20px;
-      border-radius: 16px;
-      width: 95%;
-      max-width: 1000px;
     }
-
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      gap: 14px;
-      margin-bottom: 12px;
-    }
-
-    input, select {
-      padding: 6px 10px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    label {
-      font-weight: bold;
-      font-size: 1rem;
-    }
-
-    .added-codes {
-      background: #fff;
-      color: #111;
-      padding: 10px;
-      border-radius: 8px;
-      max-width: 200px;
-      margin: 15px auto;
-      font-size: 0.95rem;
-      text-align: left;
-      max-height: 180px;
-      overflow-y: auto;
-    }
-
-    .added-codes button {
-      background: none;
-      color: red;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-
-    .print-area-wrap {
-      margin: 20px auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
-      max-width: 98vw;
-    }
-
     .print-label {
-      width: 105mm;
-      height: 95mm;
-      transform: rotate(90deg);
-      transform-origin: top left;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      page-break-after: always;
-      border: 1px dashed #999;
-      padding: 5mm;
-    }
-
-    .ean-segment {
       width: 80mm;
       height: 35mm;
       border: 1px solid #000;
+      background: #fff;
+      margin: 10px auto;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
-      box-sizing: border-box;
+      align-items: center;
     }
-
     .bar-text {
-      color: #000 !important;
-      font-size: 1.05rem;
+      color: #000;
       font-family: monospace;
-      margin-top: 2mm;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      border-radius: 6px;
-      background: #DB4B3E;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    @page {
-      size: 105mm 95mm;
-      margin: 0;
-    }
-
-    @media print {
-      body, .bar-text, .ean-segment {
-        color: #000 !important;
-      }
-      body * { visibility: hidden !important; }
-      .print-area-wrap, .print-area-wrap * {
-        visibility: visible !important;
-      }
-      .print-area-wrap {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 105mm;
-        height: 95mm;
-        background: white;
-        margin: 0;
-        padding: 0;
-      }
-      .main-content { display: none !important; }
+      font-size: 1.1rem;
+      margin-top: 5px;
     }
   </style>
 </head>
 <body>
-  <div class="main-content">
-    <h2>Generátor 3 štítků do bloku</h2>
-    <form onsubmit="event.preventDefault(); addCodes();">
-      <div class="row">
-        <label for="zona">Zóna</label>
-        <input id="zona" type="text" value="PTA" style="width:60px;">
-        <label for="ulicka">Ulička</label>
-        <input id="ulicka" type="text" value="001" style="width:60px;">
-        <label for="radaOd">Řada</label>
-        <input id="radaOd" type="text" value="01" style="width:50px;">
-        <span>až</span>
-        <input id="radaDo" type="text" value="20" style="width:50px;">
-        <label><input type="radio" name="typRady" value="all" checked> vše</label>
-        <label><input type="radio" name="typRady" value="even"> sudé</label>
-        <label><input type="radio" name="typRady" value="odd"> liché</label>
-      </div>
-      <div class="row">
-        <label for="patro">Pozice</label>
-        <select id="patro">
-          <option value="11">11</option>
-          <option value="21">21</option>
-          <option value="31">31</option>
-          <option value="32">32</option>
-          <option value="41">41</option>
-        </select>
-        <label style="margin-left:20px;">Typ:</label>
-        <label><input type="checkbox" class="typ" value="L" checked> L</label>
-        <label><input type="checkbox" class="typ" value="A"> A</label>
-        <label><input type="checkbox" class="typ" value="B"> B</label>
-        <button type="submit">Přidat</button>
-      </div>
-    </form>
-
-    <div class="added-codes" id="added-codes"></div>
-    <button onclick="generateLabels()">Generovat štítky</button>
-    <button onclick="printLabels()" style="background:#333;">Tisknout</button>
-  </div>
-
-  <div id="print-area" class="print-area-wrap" style="display:none;"></div>
+  <h2>Test Generování EAN</h2>
+  <div id="output"></div>
 
   <script>
-    let allCodes = [];
+    const codes = ["TEST123", "TEST456", "TEST789"];
+    const container = document.getElementById("output");
 
-    function refreshCodes() {
-      let html = '';
-      allCodes.forEach((c, i) => {
-        html += `<div>${c} <button onclick="deleteCode(${i})">✕</button></div>`;
-      });
-      document.getElementById('added-codes').innerHTML = html || '<i>Žádné kódy zatím nejsou.</i>';
-    }
+    codes.forEach(code => {
+      const label = document.createElement("div");
+      label.className = "print-label";
 
-    function addCodes() {
-      const zona = document.getElementById('zona').value.trim();
-      const ulicka = document.getElementById('ulicka').value.trim();
-      const patro = document.getElementById('patro').value.trim();
-      const radaOd = parseInt(document.getElementById('radaOd').value, 10);
-      const radaDo = parseInt(document.getElementById('radaDo').value, 10);
-      const typRady = document.querySelector('input[name="typRady"]:checked').value;
-      const typy = Array.from(document.querySelectorAll('.typ:checked')).map(x => x.value);
-
-      if (!zona || !ulicka || isNaN(radaOd) || isNaN(radaDo) || !patro || typy.length === 0) {
-        alert("Vyplň všechna pole a zvol typ pozice.");
-        return;
-      }
-
-      for (let r = radaOd; r <= radaDo; r++) {
-        if (typRady === "even" && r % 2 !== 0) continue;
-        if (typRady === "odd" && r % 2 === 0) continue;
-        let rStr = r.toString().padStart(2, "0");
-        typy.forEach(t => {
-          let kod = `${zona}-${ulicka}-${rStr}-${patro}-${t}`;
-          allCodes.push(kod);
-        });
-      }
-      refreshCodes();
-    }
-
-    function deleteCode(i) {
-      allCodes.splice(i, 1);
-      refreshCodes();
-    }
-
-    function mmToPx(mm) {
-      return Math.round(mm * (96 / 25.4));
-    }
-
-    function generateLabels() {
-      const printArea = document.getElementById('print-area');
-      printArea.innerHTML = '';
-      printArea.style.display = 'block';
-
-      const perBlock = 3;
-      const blocks = [];
-      for (let i = 0; i < allCodes.length; i += perBlock) {
-        blocks.push(allCodes.slice(i, i + perBlock));
-      }
-
-      blocks.forEach(group => {
-        const labelDiv = document.createElement('div');
-        labelDiv.className = 'print-label';
-
-        group.forEach(code => {
-          const segment = document.createElement('div');
-          segment.className = 'ean-segment';
-
-          const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-          svg.setAttribute('width', mmToPx(72));
-          svg.setAttribute('height', mmToPx(14));
-          JsBarcode(svg, code.replace(/-/g, ""), {
-            format: "CODE128",
-            width: 2,
-            height: mmToPx(14) - 6,
-            displayValue: false,
-            margin: 0
-          });
-
-          const textDiv = document.createElement('div');
-          textDiv.className = 'bar-text';
-          textDiv.textContent = code;
-
-          segment.appendChild(svg);
-          segment.appendChild(textDiv);
-          labelDiv.appendChild(segment);
-        });
-
-        printArea.appendChild(labelDiv);
+      const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+      JsBarcode(svg, code, {
+        format: "CODE128",
+        width: 2,
+        height: 40,
+        displayValue: false,
+        margin: 0
       });
 
-      window.scrollTo(0, document.body.scrollHeight);
-    }
+      const text = document.createElement("div");
+      text.className = "bar-text";
+      text.textContent = code;
 
-    function printLabels() {
-      if (document.getElementById('print-area').innerHTML.trim() === '') {
-        alert("Nejdřív vygeneruj štítky.");
-        return;
-      }
-      window.print();
-    }
+      label.appendChild(svg);
+      label.appendChild(text);
+      container.appendChild(label);
+    });
   </script>
 </body>
 </html>
