--- a/tisk.html
+++ b/tisk.html
@@ -2,27 +2,23 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Generátor štítků – otočený tisk</title>
+  <title>Generátor štítků – PDF Export</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <style>
     body {
       background: #0066b3;
-      font-family: 'Open Sans', sans-serif;
       color: white;
+      font-family: 'Open Sans', sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 0;
+      padding: 25px;
     }
-
     .main-content {
-      margin: 30px auto;
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
+      background: rgba(255,255,255,0.09);
+      display: inline-block;
+      padding: 24px 18px;
       border-radius: 16px;
-      width: 95%;
-      max-width: 1000px;
     }
-
     .row {
       display: flex;
       flex-wrap: wrap;
@@ -31,84 +27,19 @@
       gap: 14px;
       margin-bottom: 12px;
     }
-
     input, select {
       padding: 6px 10px;
       font-size: 1rem;
       border-radius: 6px;
       border: 1px solid #ccc;
     }
-
     label {
       font-weight: bold;
       font-size: 1rem;
     }
-
-    .added-codes {
-      background: #fff;
-      color: #111;
-      padding: 10px;
-      border-radius: 8px;
-      max-width: 200px;
-      margin: 15px auto;
-      font-size: 0.95rem;
-      text-align: left;
-      max-height: 180px;
-      overflow-y: auto;
-    }
-
-    .added-codes button {
-      background: none;
-      color: red;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-
-    .print-area-wrap {
-      margin: 20px auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
-      max-width: 98vw;
-    }
-
-    .print-label {
-      width: 105mm;
-      height: 95mm;
-      transform: rotate(90deg);
-      transform-origin: top left;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      page-break-after: always;
-      border: 1px dashed #999;
-      padding: 5mm;
-    }
-
-    .ean-segment {
-      width: 80mm;
-      height: 35mm;
-      border: 1px solid #000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      box-sizing: border-box;
-    }
-
-    .bar-text {
-      color: #000 !important;
-      font-size: 1.05rem;
-      font-family: monospace;
-      margin-top: 2mm;
-    }
-
     button {
       margin-top: 10px;
-      padding: 10px 20px;
+      padding: 10px 24px;
       font-size: 1rem;
       border-radius: 6px;
       background: #DB4B3E;
@@ -116,38 +47,48 @@
       border: none;
       cursor: pointer;
     }
-
-    @page {
-      size: 105mm 95mm;
+    .pdf-page {
+      width: 145mm;
+      height: 100mm;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 0;
+      box-sizing: border-box;
+      page-break-after: always;
+    }
+    .ean-block {
+      height: 35mm;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+    .ean-block:not(:last-child)::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 5%;
+      width: 90%;
+      border-bottom: 1px solid black;
+    }
+    svg {
       margin: 0;
     }
-
-    @media print {
-      body, .bar-text, .ean-segment {
-        color: #000 !important;
-      }
-      body * { visibility: hidden !important; }
-      .print-area-wrap, .print-area-wrap * {
-        visibility: visible !important;
-      }
-      .print-area-wrap {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 105mm;
-        height: 95mm;
-        background: white;
-        margin: 0;
-        padding: 0;
-      }
-      .main-content { display: none !important; }
+    .ean-text {
+      margin-top: 3mm;
+      color: black;
+      font-family: monospace;
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
   <div class="main-content">
-    <h2>Generátor 3 štítků do bloku</h2>
-    <form onsubmit="event.preventDefault(); addCodes();">
+    <h2>Generátor štítků (4 na stránku – PDF)</h2>
+    <form id="genForm" onsubmit="event.preventDefault(); generatePDF();">
       <div class="row">
         <label for="zona">Zóna</label>
         <input id="zona" type="text" value="PTA" style="width:60px;">
@@ -174,29 +115,17 @@
         <label><input type="checkbox" class="typ" value="L" checked> L</label>
         <label><input type="checkbox" class="typ" value="A"> A</label>
         <label><input type="checkbox" class="typ" value="B"> B</label>
-        <button type="submit">Přidat</button>
+        <button type="submit" style="margin-left:30px;">Generovat PDF</button>
       </div>
     </form>
-
-    <div class="added-codes" id="added-codes"></div>
-    <button onclick="generateLabels()">Generovat štítky</button>
-    <button onclick="printLabels()" style="background:#333;">Tisknout</button>
   </div>
-
-  <div id="print-area" class="print-area-wrap" style="display:none;"></div>
-
+  <div id="hidden-output" style="display:none;"></div>
   <script>
-    let allCodes = [];
-
-    function refreshCodes() {
-      let html = '';
-      allCodes.forEach((c, i) => {
-        html += `<div>${c} <button onclick="deleteCode(${i})">✕</button></div>`;
-      });
-      document.getElementById('added-codes').innerHTML = html || '<i>Žádné kódy zatím nejsou.</i>';
+    function mmToPx(mm) {
+      return mm * (96 / 25.4);
     }
 
-    function addCodes() {
+    function generateAllCodes() {
       const zona = document.getElementById('zona').value.trim();
       const ulicka = document.getElementById('ulicka').value.trim();
       const patro = document.getElementById('patro').value.trim();
@@ -205,89 +134,64 @@
       const typRady = document.querySelector('input[name="typRady"]:checked').value;
       const typy = Array.from(document.querySelectorAll('.typ:checked')).map(x => x.value);
 
+      let codes = [];
       if (!zona || !ulicka || isNaN(radaOd) || isNaN(radaDo) || !patro || typy.length === 0) {
         alert("Vyplň všechna pole a zvol typ pozice.");
-        return;
+        return [];
       }
-
       for (let r = radaOd; r <= radaDo; r++) {
         if (typRady === "even" && r % 2 !== 0) continue;
         if (typRady === "odd" && r % 2 === 0) continue;
         let rStr = r.toString().padStart(2, "0");
         typy.forEach(t => {
           let kod = `${zona}-${ulicka}-${rStr}-${patro}-${t}`;
-          allCodes.push(kod);
+          codes.push(kod);
         });
       }
-      refreshCodes();
+      return codes;
     }
 
-    function deleteCode(i) {
-      allCodes.splice(i, 1);
-      refreshCodes();
-    }
+    function generatePDF() {
+      const codes = generateAllCodes();
+      if (!codes.length) return;
 
-    function mmToPx(mm) {
-      return Math.round(mm * (96 / 25.4));
-    }
+      const container = document.getElementById("hidden-output");
+      container.innerHTML = "";
 
-    function generateLabels() {
-      const printArea = document.getElementById('print-area');
-      printArea.innerHTML = '';
-      printArea.style.display = 'block';
-
-      const perBlock = 3;
-      const blocks = [];
-      for (let i = 0; i < allCodes.length; i += perBlock) {
-        blocks.push(allCodes.slice(i, i + perBlock));
-      }
-
-      blocks.forEach(group => {
-        const labelDiv = document.createElement('div');
-        labelDiv.className = 'print-label';
-
+      for (let i = 0; i < codes.length; i += 4) {
+        const page = document.createElement("div");
+        page.className = "pdf-page";
+        const group = codes.slice(i, i + 4);
         group.forEach(code => {
-          const segment = document.createElement('div');
-          segment.className = 'ean-segment';
-
+          const block = document.createElement("div");
+          block.className = "ean-block";
           const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-          const kodProEAN = code.replace(/[^A-Za-z0-9]/g, "");
-          console.log("Generuji EAN pro:", kodProEAN);
-
-          try {
-            JsBarcode(svg, kodProEAN, {
-              format: "CODE128",
-              width: 2,
-              height: mmToPx(14) - 6,
-              displayValue: false,
-              margin: 0
-            });
-          } catch (e) {
-            console.error("Chyba při generování EAN pro:", kodProEAN, e);
-            return;
-          }
-
-          const textDiv = document.createElement('div');
-          textDiv.className = 'bar-text';
-          textDiv.textContent = code;
-
-          segment.appendChild(svg);
-          segment.appendChild(textDiv);
-          labelDiv.appendChild(segment);
+          JsBarcode(svg, code.replace(/[^A-Za-z0-9]/g, ""), {
+            format: "CODE128",
+            width: 2,
+            height: mmToPx(14),
+            displayValue: false,
+            margin: 0
+          });
+          const text = document.createElement("div");
+          text.className = "ean-text";
+          text.textContent = code;
+          block.appendChild(svg);
+          block.appendChild(text);
+          page.appendChild(block);
         });
-
-        printArea.appendChild(labelDiv);
-      });
-
-      window.scrollTo(0, document.body.scrollHeight);
-    }
-
-    function printLabels() {
-      if (document.getElementById('print-area').innerHTML.trim() === '') {
-        alert("Nejdřív vygeneruj štítky.");
-        return;
+        container.appendChild(page);
       }
-      window.print();
+
+      const opt = {
+        margin: 0,
+        filename: 'stitky.pdf',
+        image: { type: 'jpeg', quality: 0.98 },
+        html2canvas: { scale: 2 },
+        jsPDF: { unit: 'mm', format: [145, 100], orientation: 'landscape' }
+      };
+
+      html2pdf().set(opt).from(container).save();
     }
   </script>
 </body>
